--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,5 @@
 <resources>
     <string name="app_name">repo</string>
+    <string name="enter_username">Enter username</string>
+    <string name="user_image">User image</string>
 </resources>
